--- a/public/css/file-manager.css
+++ b/public/css/file-manager.css
@@ -57,6 +57,11 @@ header button {
     color: var(--text);
     display: none;
 }
+header button img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
 header button {
     background: transparent;
     outline: none;
@@ -91,6 +96,14 @@ aside .links {
     padding: 0.5rem 0;
     color: var(--text);
     font-weight: 650;
+    display: flex;
+    align-items: center;
+}
+.links a img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    margin: 0 0.5rem;
 }
 .app-container .app {
     position: relative;
@@ -223,7 +236,7 @@ aside .links {
     position: absolute;
     top: 0;
     right: 0;
-    width: 150px;
+    width: 165px;
     margin: auto;
     background: var(--black);
     padding: 1rem;
@@ -253,6 +266,14 @@ aside .links {
     padding: 0.2rem;
     color: var(--text);
     font-weight: 600;
+    display: flex;
+    align-items: center;
+}
+.option-menu span img {
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+    margin: 0 0.5rem;
 }
 .col img {
     width: 90px;
@@ -311,7 +332,7 @@ aside .links {
         display: block;
     }
     .app-container aside {
-        left: -25%;
+        left: -50%;
         width: 0;
     }
     .app-container .mobile-menu {
