--- a/public/css/file-manager.css
+++ b/public/css/file-manager.css
@@ -117,6 +117,81 @@ aside .links {
     align-items: center;
     overflow-y: auto;
 }
+.app #view-img {
+    display: none;
+    top: 20%;
+    padding: 0.7rem;
+}
+.app #view-video {
+    display: none;
+    width: 320px;
+    height: 300px;
+    top: 20%;
+    padding: 0.7rem;
+}
+.app #view-audio {
+    display: none;
+    width: 330px;
+    top: 20%;
+    padding: 0.7rem;
+}
+#view-audio #audio {
+    margin: 3rem auto;
+}
+.app #view-audio .audio-close {
+    outline: none;
+    border: 0.1px solid var(--text);
+    background: var(--black);
+    color: var(--error);
+    font-weight: 800;
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    position: absolute;
+    top: -15px;
+    right: -3px;
+}
+.app #view-video .video-close {
+    outline: none;
+    border: 0.1px solid var(--text);
+    background: var(--black);
+    color: var(--error);
+    font-weight: 800;
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    position: absolute;
+    top: -15px;
+    right: -3px;
+}
+.app #view-img .view-close-btn {
+    outline: none;
+    border: 0.1px solid var(--text);
+    background: var(--black);
+    color: var(--error);
+    font-weight: 800;
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    position: absolute;
+    top: -15px;
+    right: -3px;
+}
 .app .form {
     display: none;
     flex-direction: column;
@@ -209,14 +284,14 @@ aside .links {
 }
 .app h3 {
     color: var(--text);
-    margin: 0.3rem auto;
+    margin: 1.5rem auto;
     border-bottom: 0.1px solid var(--text);
 }
 .app .file-list {
     position: relative;
-    margin: 0.5rem auto;
+    margin: 1rem auto;
     width: 100%;
-    padding: 1rem 0;
+    padding: 1.5rem 0;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(auto, 1fr));
@@ -231,6 +306,11 @@ aside .links {
     border-radius: 5px;
     display: flex;
     border: 0.1px solid var(--text);
+}
+.col h3 {
+    margin: 0.3rem auto;
+    color: var(--error);
+    border: none;
 }
 .col .option-menu {
     position: absolute;
@@ -276,7 +356,7 @@ aside .links {
     margin: 0 0.5rem;
 }
 .col img {
-    width: 90px;
+    width: 100px;
     height: 100px;
     object-fit: cover;
     border-radius: 5px;
@@ -290,8 +370,19 @@ aside .links {
 .file-info span {
     color: var(--text);
     margin-bottom: 0.6rem;
-    text-overflow: hidden;
+    width: 160px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
+.truncate {
+    width: 200px; /* Set a width for the container */
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflow text */
+    text-overflow: ellipsis; /* Show ellipsis (...) */
+}
+
 .file-list .col .option {
     position: absolute;
     top: 0;
