--- a/public/css/file-manager.css
+++ b/public/css/file-manager.css
@@ -155,6 +155,7 @@ aside .links {
     position: absolute;
     top: -15px;
     right: -3px;
+    z-index: 9000;
 }
 .app #view-video .video-close {
     outline: none;
@@ -173,6 +174,7 @@ aside .links {
     position: absolute;
     top: -15px;
     right: -3px;
+    z-index: 9000;
 }
 .app #view-img .view-close-btn {
     outline: none;
@@ -191,6 +193,7 @@ aside .links {
     position: absolute;
     top: -15px;
     right: -3px;
+    z-index: 9000;
 }
 .app .form {
     display: none;
